--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "babel-plugin-transform-es2015-parameters": "^6.18.0",
     "babel-plugin-transform-es2015-spread": "^6.8.0",
     "babel-plugin-transform-strict-mode": "^6.18.0",
+    "coveralls": "^2.11.15",
+    "global": "^4.3.1",
+    "istanbul": "^0.4.5",
     "jasmine": "^2.5.2",
     "yargs": "^6.4.0"
   },
