--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,7 @@ env:
 branches:
   only:
   - master
+script
+- npm test --cover
+after_script:
+  - if [[ `node --version` == *v4.5* ]]; then cat ./build/coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js; fi
