--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "homepage": "https://github.com/uncledu/tagd#readme",
   "scripts": {
-    "test": "jasmine",
+    "test": "istanbul cover jasmine",
     "start": "babel-node src/index.js",
     "build": "babel src --out-dir lib&&babel test --out-dir spec"
   },
