--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,4 @@ env:
 branches:
   only:
   - master
-after_script:
-  - if [[ `node --version` == *v4* ]]; then cat ./build/coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js; fi
+after_script: cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
